# review_radar

./: .gitignore  Facebook_reviews.csv  Netflix_reviews.csv  README.md  app.py  pyproject.toml  requirements.txt
Documents/: Inż_MB_MM_dok1.docx
app/: app.py  db_utils.py  main_app.py
assets/data/: netflix_reviews.csv
code/: analise.py  refresh_database.py  scrape_and_save.py  scrape_automate.py  scrape_automate_save_to_database.py
code/reviews/: analise.ipynb  analise.py  scrape_and_save.py
code/stocks/: yahoo_finance_api.ipynb
database/: google_play_reviews_empty.db
diagrams/: Diagram System Architecture.drawio  test_diagram.drawio
models_comparison/: comments_downloading.ipynb  sentiment_analyzer.ipynb  sentiment_comparison.ipynb
other/Documents/zgloszenie_pracy/: Inż_MB_MM_dok1_nowe.docx
other/code_analysis/: analise.ipynb
other/code_old/: logo_3D.py  main_app.py
other/code_old/reviews/: analise.py  scrape_example.py
other/diagrams/: Diagram System Architecture.drawio
src/database_connection/: db_utils.py  sqlite_creation.py
src/functions/: app_analysis_functions.py  gui.py  scraper.py  sentiment_analysis.py
src/models/: distilbert_model.py  roberta_model.py  textblob_model.py  vader_model.py
src/pages/: app_analysis_page.py  choose_app_page.py  home_page.py
src/scripts/: models.ipynb
src/tests/: conftest.py  test_app_analysis_functions.py  test_app_analysis_page.py  test_db_utils.py  test_distilbert_model.py  test_preprocess.py  test_roberta_model.py  test_textblob_model.py  test_vader_model.py
src/tests/manual_tests/: test_preprocess.py
src/tests/other_tests/: test_preprocess.py  test_roberta_model.py  test_textblob_model.py  test_vader_model.py
