[tool.poetry]
name = "stock-predictions"
version = "0.1.0"
description = "A project for predicting stock prices using reviews."
authors = ["Mikołaj Mróz <mikolaj2268@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.2"
yfinance = "^0.2.44"
matplotlib = "^3.9.2"
textblob = "^0.18.0.post0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
