[tool.poetry]
name = "review_radar"
version = "0.1.0"
description = "A project for panalysing user comments."
authors = ["Mikołaj Mróz <mikolaj2268@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = ">=1.26.0,<2.1.0"
yfinance = "^0.2.44"
matplotlib = "^3.9.2"
textblob = "^0.18.0.post0"
seaborn = "^0.13.2"
google-play-scraper = "^1.2.7"
streamlit = "^1.39.0"
watchdog = "^5.0.3"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
nltk = "^3.9.1"
transformers = "^4.46.2"
torch = "^2.5.1"
tensorflow = "^2.18.0"
tf-keras = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
